2015-04-15  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/display.c (MagickXROIImage): Fix Coverity 10179 "Missing
	break in switch".
	(MagickXCropImage): Fix Coverity 10211 "Missing break in switch".

	* magick/utility.c (Base64Decode): Fix Coverity 10203 "Missing
	break in switch".
	(Tokenizer): Quench Coverity 10182 "Missing break in switch".  Not
	believed to be an actual problem.

	* magick/command.c (ParseUnixCommandLine): Fix Coverity 10174 and
	10178 "Missing break in switch".
	(ProcessBatchOptions): Fix Coverity 10180 "Missing break in
	switch".
	(ParseWindowsCommandLine): Fix Coverity 10220 "Missing break in
	switch".

	* coders/xwd.c (ReadXWDImage): Fix Coverity 10095 "Division or
	modulo by zero".  3rd try.

2015-04-14  Glenn Randers-Pehrson  <glennrp@simple.dallas.tx.us>

	* coders/png.c (ReadOneJNGImage): Fix Coverity 55829 and 55846
	"Resource leak".

2015-04-13  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/quantize.c (GrayscalePseudoClassImage): Fix Coverity
	55831 "Resource leak".  2nd try.

	* coders/vid.c (ReadVIDImage): Fix Coverity 55868 and 55874
	"Resource leak".  2nd try.

2015-04-12  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/psd.c (ReadPSDImage): Fix Coverity 55855 "Resource
	leak". 2nd try.

	* coders/pict.c (PictPixmapOp): Fix Coverity 55875 and 55883
	"Resource leak". 2nd try.

	* coders/pcx.c (WritePCXImage): Fix Coverity 55877 "Resource
	leak". 2nd try.

	* coders/meta.c (format8BIM): Fix Coverity 55842 "Resource
	leak". 2nd try.

	* coders/mat.c (WriteMATLABImage): Fix Coverity 55850 "Resource
	leak". 2nd try.

	* coders/dpx.c (ReadDPXImage): Fix Coverity 55878 "Resource leak".
	2nd try.

	* coders/preview.c (WritePreviewImage): Fix Coverity 55988
	"Resource leak".

2015-04-12  Glenn Randers-Pehrson  <glennrp@simple.dallas.tx.us>

	* coders/png.c (ReadOneJNGImage): Avoid some memory leaks
	newly reported by Coverity (work in progress)
