@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020150415"
-#define public MagickPackageReleaseDate "snapshot-20150415"
+#define public MagickPackageVersionAddendum ".020150416"
+#define public MagickPackageReleaseDate "snapshot-20150416"
